feat(Theme list Refresh)

--- a/src/theme/theme.less
+++ b/src/theme/theme.less
@@ -1,14 +1,31 @@
+.theme {
+  background-image: url("@/assets/image/bground_mini.jpg");
+}
+
 .theme1 {
-  width: 100%;
-  height: 100%;
-  background-size: 100% 100%;
   background-image: url("@/assets/image/8d92efcdb0007a3af8e277731bcb561b.jpg");
 }
 
 .theme2 {
-
+  background-image: url("@/assets/theme/2.jpg");
 }
 
 .theme3 {
+  background-image: url("@/assets/theme/3.jpg");
+}
 
+.theme4 {
+  background-image: url("@/assets/theme/4.jpg");
+}
+
+.theme5 {
+  background-image: url("@/assets/theme/5.jpg");
+}
+
+.theme6 {
+  background-image: url("@/assets/theme/6.jpg");
+}
+
+.theme7 {
+  background-image: url("@/assets/theme/7.jpg");
 }
