--- a/src/styles/todolist.less
+++ b/src/styles/todolist.less
@@ -65,12 +65,13 @@
   // 待办事项样式
   li {
     line-height   : 15px;
-    padding       : 5px 0;
+    padding       : 4px 8px;
     margin-top    : 10px;
     right         : 10px;
     text-align    : end;
-    font-size     : 14px;
+    font-size     : 13px;
     vertical-align: middle;
+    font-family   : Robot, serif;
 
     &:hover {
       background   : rgba(217, 217, 217, 0.75);
@@ -83,7 +84,7 @@
       width         : 15px;
       height        : 15px;
       position      : absolute;
-      left          : 0;
+      left          : 10px;
       vertical-align: middle;
       cursor        : pointer;
     }
@@ -93,7 +94,7 @@
       width   : 15px;
       height  : 15px;
       position: absolute;
-      left    : 25px;
+      left    : 30px;
       cursor  : pointer;
     }
 
@@ -154,7 +155,7 @@
       right  : 0;
     }
 
-    // 设置按钮文字的样式
+    // 设置按钮文字的样式和动态效果
     span {
       font-size : 10px;
       color     : #ffffff;
