--- a/src/styles/todolist.less
+++ b/src/styles/todolist.less
@@ -9,15 +9,19 @@
 
   // 标题样式
   #title {
-    position   : absolute;
-    top        : 20px;
-    right      : 15px;
-    font-family: Roboto;
-    font-style : normal;
-    font-weight: normal;
-    font-size  : 24px;
-    color      : rgb(69, 159, 194);
-    cursor     : pointer;
+    position        : absolute;
+    top             : 20px;
+    right           : 15px;
+    font-family     : Roboto;
+    font-style      : normal;
+    font-weight     : normal;
+    font-size       : 24px;
+    background-color: #ffffff;
+    opacity         : 0.8;
+    padding         : 4px 8px;
+    border-radius   : 15px;
+    color           : rgb(69, 159, 194);
+    cursor          : pointer;
   }
 
   // 图标样式
